--- a/src/main/resources/application-secrets.yaml
+++ b/src/main/resources/application-secrets.yaml
@@ -1,3 +1,5 @@
+# This file should not be included in vcs, and public repos. Here included in vcs for reference purposes.
+
 spring:
   datasource:
     username: aryan
