--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,5 +1,3 @@
-# This file should not be included in vcs, and public repos. Here included in vcs for reference purposes.
-
 server:
   port: 8085
 
@@ -8,5 +6,6 @@ spring:
   application:
     name: SecurityIncident
 
-
+  profiles:
+    active: dev
 
