--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -3,17 +3,19 @@ spring:
     import: optional:application-secrets.yaml
 
   datasource:
-    url: jdbc:h2:mem:incidentdb
-    driver-class-name: org.h2.Driver
+    url: jdbc:postgresql://localhost:5432/incidentdb   #jdbc:h2:mem:incidentdb
+#    driver-class-name: org.h2.Driver
+    driver-class-name: org.postgresql.Driver
   jpa:
     properties:
       hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
         show_sql: true
         format_sql: true
     generate-ddl: true
     hibernate:
       ddl-auto: update
-    database-platform: org.hibernate.dialect.H2Dialect
+#    database-platform: org.hibernate.dialect.H2Dialect
 
   h2:
     console:
